maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:7: error: value update is not a member of plm.universe.Direction
    if (getDirection()=Direction.NORTH) {
        ^PledgeMaze:53: error: not found: value tree
    tree=false
    ^